--- a/app/src/main/res/layout/fragment_f2.xml
+++ b/app/src/main/res/layout/fragment_f2.xml
@@ -23,7 +23,7 @@
                 android:layout_weight="1">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/Obdrelearn"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_centerInParent="true"
@@ -33,7 +33,7 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/button4"
+                    android:layout_below="@id/Obdrelearn"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="9dp"
                     android:text="@string/OBDII_relearn"
